--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,13 @@
 /* Documento principal Main*/
 main{
     width: 100%;
-    background-color: rgb(189, 189, 189);
+    
     font-family: Arial, Helvetica, sans-serif;
     margin:20px;
+}
+h2{
+    font-size:40px;
+    color:blueviolet;
 }
 
 /* Cabeçalho */
@@ -13,13 +17,13 @@ nav{
     background-color: rgb(255, 255, 255);
     height: 275px;
     display: flex;
+    box-shadow: 1px black black;
     
 }
 #logo img{
     width:250px;
     margin:10px;
     display: flex;
-    cursor: pointer;
 }
 #logo h2{
     display: none;
@@ -71,8 +75,9 @@ nav{
   
 
 }
-img{
-    
+.destaque img{
+    width: 100%;
+    margin-top: 20px;
 }
 #busca form input{
  padding:10px;
@@ -97,4 +102,8 @@ img{
 }
 #busca form button:hover{
     background-color: rgb(84, 21, 143);
+}
+
+.destaque h2{
+    
 }
