--- a/css/style.css
+++ b/css/style.css
@@ -3,107 +3,268 @@
 /* Documento principal Main*/
 main{
     width: 100%;
-    
+    display: flex;
+    flex-direction:column;
+    flex-wrap: nowrap;
     font-family: Arial, Helvetica, sans-serif;
     margin:20px;
+    
 }
 h2{
-    font-size:40px;
+    font-size:24px;
     color:blueviolet;
+    margin-left:10px;
+    margin-top:20px;
 }
 
-/* Cabeçalho */
-nav{
-    background-color: rgb(255, 255, 255);
-    height: 275px;
+/* inicio Header */
+.container-header{
+ display: flex;
+ flex:1;
+ justify-items: center;
+ flex-direction: row;
+ width:95%;
+ margin: 0 auto;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ padding: 10px;
+ height:350px;
+ max-height:350px;
+ margin-bottom:20px;
+}
+.menu ul{
     display: flex;
-    box-shadow: 1px black black;
-    
+    justify-content: space-between;
+    flex: 1;
+    flex-direction: row;
+    list-style: none;
+    margin:0;
+
 }
-#logo img{
-    width:250px;
-    margin:10px;
+.menu ul li{
+    margin-left:5px;
+    padding: 10px;
+}
+.menu ul li a{
+    color: blueviolet;
+    text-decoration:none;
+    font-size: 22px;
+    font-weight: bolder;
+}
+.menu ul li a:hover{
+    color: rgb(73, 71, 75);
+}
+
+.item-header{ 
+    
+    width: 100%;
+    margin:4px;
+    padding:4px;;
+    height:300px;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-content: space-around;
 }
-#logo h2{
-    display: none;
-}
-#menu,#busca{
-     display:flex;
-  
-     width:100%;
-     margin: 10px;
-     padding: 10px;
-     justify-content: center;
-     align-items:center;
-    
-     
-}
-#busca{
-    flex-direction: column;
-    align-items: flex-end;
-    
+.logo{
    
-}
-#menu ul{
-    margin: 0;
-    padding: 0;
-    list-style:none;
     display: flex;
+    
+}
+.logo img{
+    height:300px;
+    cursor: pointer;
+}
+.busca form input{
+    padding:15px;
+    outline: none;
+    border-radius:15px;
+    border:0.5px solid blueviolet;
+    margin: 4px;
+}
+.busca form  button{
+    background-color:blueviolet;
+    padding:15px;
+    border-radius:15px;
+    color: white;
+    border:none;
+    cursor: pointer;
+}
+/* FIM Header */
+
+/* Inicio Header */
+.destaque{
+    
+  flex:1;
+  justify-items: center;
+  flex-direction: row;
+  width:95%;
+  margin:0 auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 10px;
+  height:450px;
+  max-height:450px;
+  margin-bottom:10%;
+}
+#destaque-banner img{
+    width:100%;
+}
+
+/* Fim Header */
+
+/*Filtro Produtos em alta*/
+.produtos-em-alta{
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items:center;
-
-
+    width: 95%;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    margin-top: 2%;
+    margin-bottom: 5%;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin:0 auto;
+    gap:12px
 }
-#menu ul li{
-    margin: 10px;
+.filtro-produtos{
+    display: flex;
+    flex-wrap: nowrap;
+    margin-left:50px;
+    margin-right:20px;
+    padding:10px;
+    margin-bottom:10px;
+    
+    align-items: center;
 }
-#menu ul li a{
-    text-decoration: none;
-    font-size: 20px;
+.filtro-produtos strong{
+    font-size: large;
     color: blueviolet;
 }
-#menu ul li a:hover{
-    color: rgb(86, 20, 148);
+.filtro-produtos button{
+    padding:18px;
+    border-radius: 15px;
+    border:none;
+    background-color: blueviolet;
+    margin-left:15px;
+    color: white;
+    font-size: larger;
 }
-#busca form{
-    display: grid;
-    grid-template-columns: 200px 200px 200px;
-    
+#filtro{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin:4px;
+    padding: 20px;
+    width:500px;
+    border: 0.1px solid gray;
+    border-radius:15px;
 
-  
-  
+    align-items: center;
+}
+#filtro option{
+    border:none;
+    font-size: large;
+}
+/*fim filtro de produtos*/
+
+/*inicio box produtos */
+.container-produto{
+    display: flex;
+    flex: 1;
+    /* margin: 0 auto; */
+    flex-direction: row;
+    width: 94%;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    padding: 10px;
+    /* margin-bottom: 20px; */
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+   
 
 }
-.destaque img{
-    width: 100%;
+.produto{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 10px;
+    padding: 10px;
+    width:385px;
+}
+.produto:hover{
+    background-color: rgb(238, 238, 238)
+}
+.produto h3{
+    color:blueviolet;
+    margin: 0;
+    font-size:30px;
+}
+.produto p{
+    opacity:50%;
+    margin-top: 2px;
+}
+.desc-produto{
+    font-size: 20px;
+    line-height:30px;
+    opacity: 100%;
+    color:black;
+
+}
+.produto button{
+    padding: 10px;
+    width: 50%;
+    border:none;
+    background-color: blueviolet;
+    color:white;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.btn-price{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-content: stretch;
+    justify-content: space-around;
+    align-items: center;
+
+
+}
+.btn-price h3{
+    color:green;
+}
+/*fim box produtos*/
+footer{
+    display: flex;
+    flex: 1;
+    justify-items: center;
+    flex-direction: row;
+    width: 94%;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    padding: 10px;
+    height: 350px;
+    max-height: 350px;
+    margin-bottom: 20px;
     margin-top: 20px;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-around;
+    align-items: stretch;
 }
-#busca form input{
- padding:10px;
- outline:none;
- border:0.07em solid blueviolet;
- margin-bottom:10px;
- border-radius: 10px;
-
-
-}
-#busca form button{
- padding: 10px;
- background-color: blueviolet;
- color:white;
- margin-left:10px;
- border:none;
- border-radius: 10px;
- cursor:pointer;
- width: 100px;
- height: 37px;
- 
-}
-#busca form button:hover{
-    background-color: rgb(84, 21, 143);
-}
-
-.destaque h2{
+.footer-1{
+    margin: 4px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
 }
